# scot

./: .gitignore  CMakeLists.txt  README.md  log.txt  reference-ibv-err.txt  scot-mt-sample-script.sh
config/: menc.conf  qp.conf  scot.conf
experiments/: memcached-1.5.19.patch  redis-7.0.5.patch  redis-7.0.5.patch.bak
experiments/mencius/: menc-core.cc  menc-rpli.cc  menc-rply.cc
experiments/mencius/includes/: menc-core.hh
experiments/mencius/tests/: scotmc-st-test.cc
report/: README.txt  report.py
scripts/: kill-memc.sh  make_c.sh  mp-mt-testbin.sh  mt-testbin-gdb.sh  mt-testbin.sh  propagate.sh  scot-mt-testbin-gdb.sh  scot-mt-testbin-skew.sh  scot-mt-testbin.sh  scot-redis-int.sh  scot-st-testbin-c-gdb.sh  scot-st-testbin-c.sh  scotmc-st-testbin.sh  testbin.sh
src/: lfmap.cc  scot-chkr.cc  scot-conn.cc  scot-core-c.cc  scot-core.cc  scot-eval.cc  scot-hb.cc  scot-log.cc  scot-mout.cc  scot-rcvr.cc  scot-rpli.cc  scot-rply.cc  scot-slot.cc  scot-worker.cc
src/includes/: lfmap.hh  scot-conn.hh  scot-core-c.h  scot-core.hh  scot-def.hh  scot-eval.hh  scot-hb.hh  scot-log.hh  scot-mout.hh  scot-rule-c.h  scot-rule.hh  scot-slot.hh  scot-worker.hh
src/sample/: scot-balance-rule-c.cc  scot-balance-rule-c.h  scot-balance-rule.cc  scot-balance-rule.hh
src/tests/: mp-mt-test.cc  mt-test.cc  scot-mt-test-skew.cc  scot-mt-test.cc  scot-st-test-c.c  test.cc
